--- a/src/view/LoginRegisterPageView.fxml
+++ b/src/view/LoginRegisterPageView.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<BorderPane fx:id="BordrerPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <VBox alignment="CENTER" prefHeight="244.0" prefWidth="317.0" spacing="15.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="LoginBTN" mnemonicParsing="false" text="Login">
+               <font>
+                  <Font size="18.0" />
+               </font></Button>
+            <Button fx:id="RegisterBTN" mnemonicParsing="false" text="Register">
+               <font>
+                  <Font size="18.0" />
+               </font></Button>
+         </children>
+      </VBox>
+   </center>
+</BorderPane>
