--- a/src/view/StyleSheet.css
+++ b/src/view/StyleSheet.css
@@ -12,7 +12,7 @@
 }
 .root{
    -fx-background-image : url("/img/background.jpg");
-   -fx-background-color:black;
+   -fx-background-color:white;
    -fx-background-size: cover;
    -fx-background-repeat: no-repeat;
 }
